# agent-study

./: .gitignore  README.md  pyproject.toml
Medium_Agent/AgenticMesh/: README.md
Medium_Agent/AgenticMesh/scr/commn/: config.py
Medium_Agent/AgenticMesh/scr/registry/: service.py
tinytroupe/: agent.py  app.py  config.py  constants.py  extraction.py  utils.py
tinytroupe/prompts/: interaction_results_extractor.mustache  tinyperson.mustache
